@@ -1,4 +1,8 @@
 release 1.0.1 (2008-11/12)
+- Fixed issue 136
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=136
+  Improved error messages when building a URI from classes/methods that are not
+  annotated with @Path.
 - Fixed issue 140
   https://jersey.dev.java.net/issues/show_bug.cgi?id=140
   The full functionality of the client API can be used independently of the
